# folio

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: character_controller.cpp.B39535316B71293D.idx  main.cpp.14C4BDDCB790F96C.idx  sfml_input.cpp.3BA4EBA757DB4372.idx
adapters/sfml/: sfml_input.cpp  sfml_input.hpp
apps/app_core/: game_loop.cpp  game_loop.hpp
apps/demo/: demo_game.cpp  demo_game.hpp  main.cpp
apps/interface/: game.hpp
game/collision/: collision.hpp
game/combat/: fighter.hpp
game/geometry/: types.hpp
game/movement/: character_controller.cpp  character_controller.hpp
game/world/: chunks.hpp  tile_map.cpp  tile_map.hpp  world.hpp
src/collision/: collision.hpp
src/combat/: fighter.hpp
src/concurrency/: job_system.hpp
src/core/: id.hpp  input.hpp  time.hpp  utilities.hpp
src/geometry/: types.hpp
src/movement/: character_controller.cpp  character_controller.hpp
src/world/: chunks.hpp  iso.hpp  tile_map.cpp  tile_map.hpp  world.hpp
